Fix overflow issues on profile page

--- a/src/common/components/profile-preview/index.scss
+++ b/src/common/components/profile-preview/index.scss
@@ -1,4 +1,4 @@
-.profile-container{
+.profile-container {
     top: 20px;
     width: 38%;
     z-index: 1;
@@ -71,6 +71,7 @@
     bottom: 0px;
     left: 0px;
     right: 0px;
+    z-index: 3;
   }
 }
 
